syntax = "proto3";
package Proto;
import "Objects/vehicle.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message CreateDashboardUsageParkyCoinsRequest {
    string park_name = 1;
    google.protobuf.Timestamp initial_date = 2;
    google.protobuf.Timestamp end_date = 3;
    VehicleType vehicle_type = 4;
    int32 total_minutes = 5;
    google.protobuf.FieldMask fieldMask = 6;
}

message CreateDashboardUsageParkyCoinsResult {
    repeated CustomerParkyCoinsSpentResult user_parky_coins_spent_result_dtos = 1;
}

message CustomerParkyCoinsSpentResult {
    string username = 1;
    double parky_coins_spent = 2;
}

message DashboardElements {
    repeated CustomerParkyCoinsSpentResult elements = 1;
}