syntax = "proto3";
package Proto;
import "google/protobuf/timestamp.proto";
import "google/protobuf/field_mask.proto";

message ParkyWalletMovement {
  int32 amount =  1;
  string date =  2;
  string movement_type =  3;
}

message ParkyWallet {
  int32 current_balance =  1;
  repeated ParkyWalletMovement movements =  2;
}

message AmountChangeRequest {
	int32 amount = 1;
	google.protobuf.FieldMask fieldMask = 2;
}

message AmountChangeResult {
	int32 amount = 1;
}

message UpdateResult {
	bool is_successful = 1;
}